--- a/packages/web-components/src/components/tabs/tabs.scss
+++ b/packages/web-components/src/components/tabs/tabs.scss
@@ -27,6 +27,11 @@ $inset-transition: inset 110ms motion(standard, productive);
 :host(#{$prefix}-tabs-skeleton) {
   @extend .#{$prefix}--tabs;
   @include emit-layout-tokens();
+
+  .#{$prefix}--tab--list {
+    gap: convert.to-rem(1px);
+  }
+
   .#{$prefix}--tabs-nav-content-container {
     position: relative;
     overflow: scroll;
@@ -152,11 +157,6 @@ $inset-transition: inset 110ms motion(standard, productive);
   }
 }
 
-:host(#{$prefix}-tab:not([type='contained']))
-  + :host(#{$prefix}-tab:not([type='contained'])) {
-  margin-inline-start: convert.to-rem(1px);
-}
-
 :host(#{$prefix}-tab[badge-indicator][icon-only]:not([icon-size='lg']))
   #{$prefix}-badge-indicator,
 :host(
@@ -186,6 +186,10 @@ $inset-transition: inset 110ms motion(standard, productive);
     --#{$prefix}-tooltip-padding-block: #{convert.to-rem(2px)};
     --#{$prefix}-popover-caret-width: #{convert.to-rem(8px)};
     --#{$prefix}-popover-caret-height: #{convert.to-rem(4px)};
+    --#{$prefix}-popover-offset: #{convert.to-rem(8px)};
+  }
+
+  #{$prefix}-tooltip-content {
     --#{$prefix}-popover-offset: #{convert.to-rem(8px)};
   }
 
